Fix team and project picker overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -342,11 +342,11 @@ textarea {
 }
 
 .dropdown-menu-content {
-  @apply z-40 overflow-hidden rounded-md border border-neutral-800 bg-neutral-900;
+  @apply z-40 flex flex-col rounded-md border border-neutral-800 bg-neutral-900;
 }
 
 .dropdown-menu-item {
-  @apply relative cursor-pointer border-0 py-2 text-sm text-neutral-300 outline-none transition hover:bg-neutral-800;
+  @apply relative flex-none cursor-pointer border-0 py-2 text-sm text-neutral-300 outline-none transition hover:bg-neutral-800;
 }
 
 .dropdown-menu-item-noindent {
@@ -362,7 +362,7 @@ textarea {
 }
 
 .dropdown-menu-separator {
-  @apply h-[1px] bg-neutral-800;
+  @apply h-[1px] flex-none bg-neutral-800;
 }
 
 .dropdown-menu-button {
